fix(#18): viewport jumping/rendering issue on large values
moves editor into new window to prevent datalose on focus switch
Value cell inline editor replaced with dialog bases input (#18)
some commands have been removed since those cant work with the new window bases approch (todo)

--- a/sources/localstorage-editor/popup.css
+++ b/sources/localstorage-editor/popup.css
@@ -1,6 +1,6 @@
 body {
   background: lightgray;
-  width: 700px;
+  /*width: 700px;*/
   padding: 3px;
 }
 
